# tex

./: CMakeLists.txt  README.md
exe/: utf8totex.c
include/tex/: tex.h
include/utf8totex/: utf8totex.h
src/: fputs.c  from_char.c  from_str.c  get_utf8_char.c  internal.h  tex_fputs.c  tex_from_char.c  tex_from_str.c  to_tex.c
